When building appbat, put /usr/local/bin higher on the PATH.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -898,7 +898,7 @@ for arch in lsb_archs:
                                 flunkOnFailure=False, haltOnFailure=False))
     appbat.addStep(
         lfbuildbot.LSBConfigureAppbat(command=["./configure"],
-                                      env={"PATH": "/opt/lsb/bin:/opt/lsb/appbat/bin:/bin:/usr/bin:/usr/local/bin"},
+                                      env={"PATH": "/opt/lsb/bin:/opt/lsb/appbat/bin:/usr/local/bin:/bin:/usr/bin"},
                                       workdir="appbat", name="configure",
                                       flunkOnFailure=True, haltOnFailure=True))
     appbat.addStep(ShellCommand(command=["extras/entitycheck.py", "-c",
@@ -910,17 +910,17 @@ for arch in lsb_archs:
                                 flunkOnFailure=False, haltOnFailure=False))
     appbat.addStep(
         lfbuildbot.LSBBuildAppbat(command="make appbat ENTITYCHECK_QUIET=-q", 
-                                  env={"PATH": "/opt/lsb/bin:/opt/lsb/appbat/bin:/bin:/usr/bin:/usr/local/bin"},
+                                  env={"PATH": "/opt/lsb/bin:/opt/lsb/appbat/bin:/usr/local/bin:/bin:/usr/bin"},
                                   workdir="appbat", name="build-appbat", 
                                   timeout=build_timeout_seconds))
     appbat.addStep(
         lfbuildbot.LSBBuildAppbat(command="make desktop ENTITYCHECK_QUIET=-q", 
-                                  env={"PATH": "/opt/lsb/bin:/opt/lsb/appbat/bin:/bin:/usr/bin:/usr/local/bin"},
+                                  env={"PATH": "/opt/lsb/bin:/opt/lsb/appbat/bin:/usr/local/bin:/bin:/usr/bin"},
                                   workdir="appbat", name="build-desktop", 
                                   timeout=build_timeout_seconds))
     appbat.addStep(
         lfbuildbot.LSBBuildAppbat(command="make addons ENTITYCHECK_QUIET=-q", 
-                                  env={"PATH": "/opt/lsb/bin:/opt/lsb/appbat/bin:/bin:/usr/bin:/usr/local/bin"},
+                                  env={"PATH": "/opt/lsb/bin:/opt/lsb/appbat/bin:/usr/local/bin:/bin:/usr/bin"},
                                   workdir="appbat", name="build-addons",
                                   timeout=build_timeout_seconds))
     appbat.addStep(
