The t2c-alsa tests depend on tet-harness, it turns out.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -131,6 +131,7 @@ lsb_dependencies = { "appbat": ["tet-harness", "libbat",
                      "desktop-test": ["tet-harness"],
                      "printing-test": ["tet-harness"],
                      "runtime-test": ["tet-harness"],
+                     "t2c-alsa-tests": ["tet-harness"],
                      "t2c-cpp-tests": ["tet-harness"],
                      "t2c-desktop-tests": ["tet-harness"],
                      "t2c-runtime-tests": ["tet-harness"],
