--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -282,19 +282,26 @@ def always_pull_from_devel(project):
 # a shorter alias to save typing.
 c = BuildmasterConfig = {}
 
-# Priority order.  In general, we don't care what order things build in,
-# or the order is sufficiently determined by triggers.  SDK builds and 
-# updates can affect other builds, however, and should therefore be done
-# first, and the update should happen as soon after the build as possible.
+# Priority order.  In general, we don't care what order things build in.
+# Builds related to the SDK and dependencies should be built first,
+# however, just in case they are missing (on a new build slave, for
+# example).
 
 def prioritize(buildmaster, builders):
-    sdk_builders = []
-    for jobname in ("build-sdk", "libbat"):
+    dependencies = [lambda x: isinstance(x, tuple) and x[0] or x
+                    for x in reduce(lambda x, y: x + y[1], 
+                                    lsb_dependencies, [])]
+
+    priorities = ["build-sdk"] + dependencies
+
+    prioritized_builders = []
+    for jobname in priorities:
         for builder in builders[:]:
             if builder.name[:len(jobname)] == jobname:
                 builders.remove(builder)
-                sdk_builders.append(builder)
-    return sdk_builders + builders
+                prioritized_builders.append(builder)
+
+    return prioritized_builders + builders
 
 c['prioritizeBuilders'] = prioritize
 
