Fix bug in prioritization function.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -290,7 +290,7 @@ c = BuildmasterConfig = {}
 def prioritize(buildmaster, builders):
     dependencies = [lambda x: isinstance(x, tuple) and x[0] or x
                     for x in reduce(lambda x, y: x + y[1], 
-                                    lsb_dependencies, [])]
+                                    lsb_dependencies.items(), [])]
 
     priorities = ["build-sdk"] + dependencies
 
