Fix buildbot priority function.
Don't overuse lambdas; we don't want a list of functions, but a list
of results from that function.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -288,8 +288,8 @@ c = BuildmasterConfig = {}
 # example).
 
 def prioritize(buildmaster, builders):
-    dependencies = [lambda x: isinstance(x, tuple) and x[0] or x
-                    for x in reduce(lambda x, y: x + y[1], 
+    dependencies = [isinstance(x, tuple) and x[0] or x
+                    for x in reduce(lambda x, y: x + y[1],
                                     lsb_dependencies.items(), [])]
 
     priorities = ["build-sdk"] + dependencies
