Support the possibility of multiple build slaves per architecture.
Added support to the config for adding the multiple slaves for
architectures which use them, and add second build slaves for
s390 and s390x architectures.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -68,6 +68,11 @@ lsb_buildslave_arch_indep_arch = "x86_64"
 # immediately above, CANNOT be part of this list.
 low_resource_archs = ["s390", "s390x"]
 
+# Some architectures are served by multiple build slaves; these are
+# listed here.
+multi_slave_archs = { "s390": ["lfbuild-s390", "lfbuild-s390-2"],
+                      "s390x": ["lfbuild-s390x", "lfbuild-s390x-2"] }
+
 # Extra projects to build as part of the SDK project.
 lsb_bzr_sdk_projects = ["lsbdev-c++", "lsbdev-qt", "lsbdev-qt3"]
 
@@ -550,10 +555,12 @@ indep_added = []
 # every build slave (regular and devchk) needs a SDK build job.
 
 for slave_id in lsb_archs + devchk_build_slaves:
-    if slave_id in lsb_archs:
-        slave_prefix = "lfbuild-"
+    if slave_id in multi_slave_archs:
+        slave_list = multi_slave_archs[slave_id]
+    elif slave_id in lsb_archs:
+        slave_list = ["lfbuild-" + slave_id]
     else:
-        slave_prefix = "devchk-"
+        slave_list = ["devchk-" + slave_id]
 
     # SDK.  This is unique because it is used to build everything else.  So
     # we have to build it with a known good SDK, install it, and use that
@@ -642,7 +649,7 @@ for slave_id in lsb_archs + devchk_build_slaves:
 
     lsb_builds.append(
         { 'name': 'build-sdk-' + slave_id,
-          'slavenames': [slave_prefix + slave_id],
+          'slavenames': slave_list,
           'builddir': 'build-sdk-' + slave_id, 'factory': build_sdk, 
           'category': 'lsb', 
           'locks': [nondep_job_lock.access('counting'), 
@@ -657,7 +664,10 @@ for arch in lsb_archs:
     # class we use.)
 
     for prj in lsb_pkg_subdir_projects:
-        if prj in lsb_arch_indep_projects:
+        if arch in multi_slave_archs:
+            buildslaves = multi_slave_archs[arch]
+            build_arch = arch
+        elif prj in lsb_arch_indep_projects:
             if prj in indep_added:
                 continue
             else:
@@ -725,7 +735,10 @@ for arch in lsb_archs:
     # building those packages.
 
     for (prj, repo) in lsb_packaging_projects:
-        if prj in lsb_arch_indep_projects:
+        if arch in multi_slave_archs:
+            buildslaves = multi_slave_archs[arch]
+            build_arch = arch
+        elif prj in lsb_arch_indep_projects:
             if prj in indep_added:
                 continue
             else:
@@ -788,6 +801,11 @@ for arch in lsb_archs:
 
     # Weird builds.  These don't conform to one of the patterns, and
     # so have to be custom.
+
+    if arch in multi_slave_archs:
+        buildslaves = multi_slave_archs[arch]
+    else:
+        buildslaves = ["lfbuild-" + arch]
 
     # Builds based on appbat (appbat and libbat).
 
