Handle arch-independent builds before multi-builder builds.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -664,16 +664,16 @@ for arch in lsb_archs:
     # class we use.)
 
     for prj in lsb_pkg_subdir_projects:
-        if arch in multi_slave_archs:
-            buildslaves = multi_slave_archs[arch]
-            build_arch = arch
-        elif prj in lsb_arch_indep_projects:
+        if prj in lsb_arch_indep_projects:
             if prj in indep_added:
                 continue
             else:
                 buildslaves = ["lfbuild-" + lsb_buildslave_arch_indep_arch]
                 build_arch = lsb_buildslave_arch_indep_arch
                 indep_added.append(prj)
+        elif arch in multi_slave_archs:
+            buildslaves = multi_slave_archs[arch]
+            build_arch = arch
         else:
             buildslaves = ["lfbuild-" + arch]
             build_arch = arch
@@ -735,16 +735,16 @@ for arch in lsb_archs:
     # building those packages.
 
     for (prj, repo) in lsb_packaging_projects:
-        if arch in multi_slave_archs:
-            buildslaves = multi_slave_archs[arch]
-            build_arch = arch
-        elif prj in lsb_arch_indep_projects:
+        if prj in lsb_arch_indep_projects:
             if prj in indep_added:
                 continue
             else:
                 buildslaves = ["lfbuild-" + lsb_buildslave_arch_indep_arch]
                 build_arch = lsb_buildslave_arch_indep_arch
                 indep_added.append(prj)
+        elif arch in multi_slave_archs:
+            buildslaves = multi_slave_archs[arch]
+            build_arch = arch
         else:
             buildslaves = ["lfbuild-" + arch]
             build_arch = arch
