Make buildbot location into a toplevel setting.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -35,9 +35,13 @@ except ImportError:
 # For the special "sdk" project, the job's name is "build-sdk-arch".
 # Its scheduler is prefixed with "sch-", like the others.
 
+# Path where buildbot lives on the slaves.
+
+buildbot_slave_path = "/opt/buildbot"
+
 # Toplevel configuration, used by the builder/scheduler setup.
 
-web_htpasswd_path = "/opt/buildbot/htpasswd"
+web_htpasswd_path = os.path.join(buildbot_slave_path, "htpasswd")
 bzr_toplevel = "http://bzr.linuxfoundation.org/"
 
 # Timers and timeouts for builds.  We define them as hours and minutes
@@ -185,7 +189,9 @@ build_timeout_seconds = \
 # we use the list of build slaves in a number of places, we keep the
 # master list in a separate file.
 devchk_build_slaves = \
-    [x.strip() for x in open("/opt/buildbot/buildbot-config/devchk_build_slave_list")
+    [x.strip() 
+     for x in open(os.path.join(buildbot_slave_path,
+                                "buildbot-config/devchk_build_slave_list"))
      if x]
 
 # Helper functions
@@ -315,7 +321,7 @@ c['prioritizeBuilders'] = prioritize
 # the buildslave's mktap invocation.
 
 c['slaves'] = []
-slave_password_file = open("/opt/buildbot/slave_pwds")
+slave_password_file = open(os.path.join(buildbot_slave_path, "slave_pwds"))
 for line in slave_password_file:
     (user, pw) = line.strip().split(":", 1)
     c['slaves'].append(BuildSlave(user, pw, max_builds=1))
@@ -358,7 +364,7 @@ for project in lsb_change_sources:
     added.append(project)
 
 c['change_source'] = lfbuildbot.BzrLsbMaildirSource(
-    "/opt/buildbot/Maildir", branchMap=branch_map)
+    os.path.join(buildbot_slave_path, "Maildir"), branchMap=branch_map)
 
 
 ####### SCHEDULERS
@@ -408,7 +414,8 @@ jobdir_repos["libbat"] = "appbat"
 
 sch_jobdir = lfbuildbot.MultiScheduler(
     name="sch_jobdir", builderNames=all_builder_list, 
-    jobdir="/opt/buildbot/jobdir", repos=jobdir_repos, archs=lsb_archs, 
+    jobdir=os.path.join(buildbot_slave_path, "jobdir"),
+    repos=jobdir_repos, archs=lsb_archs, 
     indep_prj=lsb_arch_indep_projects,
     indep_arch=lsb_buildslave_arch_indep_arch,
     devchk_builders=devchk_build_slaves)
