Move appbat package cache to /opt/buildbot/tmp.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -837,15 +837,20 @@ for arch in lsb_archs:
                                 workdir="appbat", name="clear-old-results"))
     libbat.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
                                 workdir="appbat", name="create-results-dir"))
-    libbat.addStep(ShellCommand(command=["mkdir", "-p", 
-                                         "/tmp/appbat-pkgcache"],
-                                workdir="appbat", name="create-pkgcache"))
-    libbat.addStep(ShellCommand(command="cp /tmp/appbat-pkgcache/* packages",
-                                workdir="appbat", name="copy-pkgcache",
-                                flunkOnFailure=False, haltOnFailure=False))
-    libbat.addStep(ShellCommand(command="rm -f /tmp/appbat-pkgcache/*",
-                                workdir="appbat", name="clear-pkgcache",
-                                flunkOnFailure=False, haltOnFailure=False))
+    libbat.addStep(
+        ShellCommand(command=["mkdir", "-p",  
+                              "%s/tmp/appbat-pkgcache" % buildbot_slave_path],
+                     workdir="appbat", name="create-pkgcache"))
+    libbat.addStep(
+        ShellCommand(command="cp %s/tmp/appbat-pkgcache/* packages"
+                     % buildbot_slave_path,
+                     workdir="appbat", name="copy-pkgcache",
+                     flunkOnFailure=False, haltOnFailure=False))
+    libbat.addStep(
+        ShellCommand(command="rm -f %s/tmp/appbat-pkgcache/*"
+                     % buildbot_slave_path,
+                     workdir="appbat", name="clear-pkgcache",
+                     flunkOnFailure=False, haltOnFailure=False))
     libbat.addStep(
         lfbuildbot.LSBConfigureAppbat(command=["./configure.libbat"],
                                       workdir="appbat", name="configure"))
@@ -878,7 +883,8 @@ for arch in lsb_archs:
                    masterdest=WithProperties("libbat-%%(result_type:-results)s-%s.tar.gz" % arch),
                    workdir="appbat", name="upload-results"))
     libbat.addStep(
-        ShellCommand(command="cp packages/*tar* /tmp/appbat-pkgcache",
+        ShellCommand(command="cp packages/*tar* %s/tmp/appbat-pkgcache"
+                     % buildbot_slave_path,
                      workdir="appbat", name="save-pkgcache",
                      flunkOnFailure=False, haltOnFailure=False,
                      alwaysRun=True))
@@ -918,15 +924,20 @@ for arch in lsb_archs:
                                 workdir="appbat", name="clear-old-results"))
     appbat.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
                                 workdir="appbat", name="create-results-dir"))
-    appbat.addStep(ShellCommand(command=["mkdir", "-p", 
-                                         "/tmp/appbat-pkgcache"],
-                                workdir="appbat", name="create-pkgcache"))
-    appbat.addStep(ShellCommand(command="cp /tmp/appbat-pkgcache/* packages",
-                                workdir="appbat", name="copy-pkgcache",
-                                flunkOnFailure=False, haltOnFailure=False))
-    appbat.addStep(ShellCommand(command="rm -f /tmp/appbat-pkgcache/*",
-                                workdir="appbat", name="clear-pkgcache",
-                                flunkOnFailure=False, haltOnFailure=False))
+    appbat.addStep(
+        ShellCommand(command=["mkdir", "-p", 
+                              "%s/tmp/appbat-pkgcache" % buildbot_slave_path],
+                     workdir="appbat", name="create-pkgcache"))
+    appbat.addStep(
+        ShellCommand(command="cp %s/tmp/appbat-pkgcache/* packages"
+                     % buildbot_slave_path,
+                     workdir="appbat", name="copy-pkgcache",
+                     flunkOnFailure=False, haltOnFailure=False))
+    appbat.addStep(
+        ShellCommand(command="rm -f %s/tmp/appbat-pkgcache/*"
+                     % buildbot_slave_path,
+                     workdir="appbat", name="clear-pkgcache",
+                     flunkOnFailure=False, haltOnFailure=False))
     appbat.addStep(
         lfbuildbot.LSBConfigureAppbat(command=["./configure"],
                                       env={"PATH": "/opt/lsb/bin:/opt/lsb/appbat/bin:/usr/local/bin:/bin:/usr/bin"},
@@ -985,7 +996,8 @@ for arch in lsb_archs:
                    workdir="appbat", name="upload-results", 
                    flunkOnFailure=False))
     appbat.addStep(
-        ShellCommand(command="cp packages/*tar* /tmp/appbat-pkgcache",
+        ShellCommand(command="cp packages/*tar* %s/tmp/appbat-pkgcache"
+                     % buildbot_slave_path,
                      workdir="appbat", name="save-pkgcache",
                      flunkOnFailure=False, haltOnFailure=False,
                      alwaysRun=True))
