Don't force an official release when forcing a particular LSB version.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -73,7 +73,10 @@ lsb_buildslave_arch_indep_arch = "x86_64"
 low_resource_archs = ["s390", "s390x"]
 
 # Some architectures are served by multiple build slaves; these are
-# listed here.
+# listed here.  Dependencies are built on only one build slave, to
+# ensure they get updated on all build slaves in a coordinated
+# manner; make sure the first build slave in each list is the
+# same as the build slave that distributes those builds.
 multi_slave_archs = { "s390": ["lfbuild-s390", "lfbuild-s390-2"],
                       "s390x": ["lfbuild-s390x", "lfbuild-s390x-2"] }
 
@@ -143,6 +146,13 @@ lsb_dependencies = { "appbat": ["tet-harness", "libbat",
                      "t2c-desktop-tests": ["tet-harness"],
                      "t2c-runtime-tests": ["tet-harness"],
                      "xts5-test": ["tet-harness"] }
+
+# This complicated-looking thing just generates the list of packages
+# that are dependencies of other packages.
+lsb_depended_pkgs = set(reduce(
+    lambda x, y: x + [z for z in y if isinstance(z, str)] +
+                     [z[0] for z in y if isinstance(z, tuple)],
+    lsb_dependencies.values(), []))
 
 # Job locking.  We don't limit the number of concurrent jobs per
 # slave in the slave config; instead, we only allow one build at a time
@@ -277,7 +287,7 @@ def add_post_dependency_triggers(project, arch, builder):
             name="remove-old-saved-dep-tarball"))
         builder.addStep(ShellCommand(
             command=["cp", "../results.tar.gz",
-                     WithProperties("../../saved/%%(branch_name:-devel)s/%s.tar.gz" % prj_name)],
+                     WithPropertes("../../saved/%%(branch_name:-devel)s/%s.tar.gz" % prj_name)],
             name="save-dep-tarball"))
 
 def always_pull_from_devel(project):
@@ -561,7 +571,11 @@ indep_added = []
 
 for slave_id in lsb_archs + devchk_build_slaves:
     if slave_id in multi_slave_archs:
-        slave_list = multi_slave_archs[slave_id]
+        # For multi-slave archs, only build on one slave.
+        # The SDK is a dependency for pretty much every other
+        # build, so build it on the first slave and distribute it
+        # to the others.
+        slave_list = multi_slave_archs[slave_id][:1]
     elif slave_id in lsb_archs:
         slave_list = ["lfbuild-" + slave_id]
     else:
@@ -678,6 +692,8 @@ for arch in lsb_archs:
                 indep_added.append(prj)
         elif arch in multi_slave_archs:
             buildslaves = multi_slave_archs[arch]
+            if prj in lsb_dependencies:
+                buildslaves = buildslaves[:1]
             build_arch = arch
         else:
             buildslaves = ["lfbuild-" + arch]
@@ -749,6 +765,8 @@ for arch in lsb_archs:
                 indep_added.append(prj)
         elif arch in multi_slave_archs:
             buildslaves = multi_slave_archs[arch]
+            if prj in lsb_dependencies:
+                buildslaves = buildslaves[:1]
             build_arch = arch
         else:
             buildslaves = ["lfbuild-" + arch]
@@ -897,7 +915,7 @@ for arch in lsb_archs:
     locks = [nondep_job_lock.access('counting')]
 
     lsb_builds.append(
-        { 'name': 'libbat-' + arch, 'slavenames': buildslaves,
+        { 'name': 'libbat-' + arch, 'slavenames': buildslaves[:1],
           'builddir': 'libbat-' + arch, 'factory': libbat,
           'category': 'lsb', 'locks': locks })
 
