--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -73,10 +73,7 @@ lsb_buildslave_arch_indep_arch = "x86_64"
 low_resource_archs = ["s390", "s390x"]
 
 # Some architectures are served by multiple build slaves; these are
-# listed here.  Dependencies are built on only one build slave, to
-# ensure they get updated on all build slaves in a coordinated
-# manner; make sure the first build slave in each list is the
-# same as the build slave that distributes those builds.
+# listed here.
 multi_slave_archs = { "s390": ["lfbuild-s390", "lfbuild-s390-2"],
                       "s390x": ["lfbuild-s390x", "lfbuild-s390x-2"] }
 
@@ -146,13 +143,6 @@ lsb_dependencies = { "appbat": ["tet-harness", "libbat",
                      "t2c-desktop-tests": ["tet-harness"],
                      "t2c-runtime-tests": ["tet-harness"],
                      "xts5-test": ["tet-harness"] }
-
-# This complicated-looking thing just generates the list of packages
-# that are dependencies of other packages.
-lsb_depended_pkgs = set(reduce(
-    lambda x, y: x + [z for z in y if isinstance(z, str)] +
-                     [z[0] for z in y if isinstance(z, tuple)],
-    lsb_dependencies.values(), []))
 
 # Job locking.  We don't limit the number of concurrent jobs per
 # slave in the slave config; instead, we only allow one build at a time
@@ -287,7 +277,7 @@ def add_post_dependency_triggers(project, arch, builder):
             name="remove-old-saved-dep-tarball"))
         builder.addStep(ShellCommand(
             command=["cp", "../results.tar.gz",
-                     WithPropertes("../../saved/%%(branch_name:-devel)s/%s.tar.gz" % prj_name)],
+                     WithProperties("../../saved/%%(branch_name:-devel)s/%s.tar.gz" % prj_name)],
             name="save-dep-tarball"))
 
 def always_pull_from_devel(project):
@@ -571,11 +561,7 @@ indep_added = []
 
 for slave_id in lsb_archs + devchk_build_slaves:
     if slave_id in multi_slave_archs:
-        # For multi-slave archs, only build on one slave.
-        # The SDK is a dependency for pretty much every other
-        # build, so build it on the first slave and distribute it
-        # to the others.
-        slave_list = multi_slave_archs[slave_id][:1]
+        slave_list = multi_slave_archs[slave_id]
     elif slave_id in lsb_archs:
         slave_list = ["lfbuild-" + slave_id]
     else:
@@ -692,8 +678,6 @@ for arch in lsb_archs:
                 indep_added.append(prj)
         elif arch in multi_slave_archs:
             buildslaves = multi_slave_archs[arch]
-            if prj in lsb_dependencies:
-                buildslaves = buildslaves[:1]
             build_arch = arch
         else:
             buildslaves = ["lfbuild-" + arch]
@@ -765,8 +749,6 @@ for arch in lsb_archs:
                 indep_added.append(prj)
         elif arch in multi_slave_archs:
             buildslaves = multi_slave_archs[arch]
-            if prj in lsb_dependencies:
-                buildslaves = buildslaves[:1]
             build_arch = arch
         else:
             buildslaves = ["lfbuild-" + arch]
@@ -915,7 +897,7 @@ for arch in lsb_archs:
     locks = [nondep_job_lock.access('counting')]
 
     lsb_builds.append(
-        { 'name': 'libbat-' + arch, 'slavenames': buildslaves[:1],
+        { 'name': 'libbat-' + arch, 'slavenames': buildslaves,
           'builddir': 'libbat-' + arch, 'factory': libbat,
           'category': 'lsb', 'locks': locks })
 
