Drop s390(x) archs to one build slave.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -74,8 +74,7 @@ low_resource_archs = ["s390", "s390x"]
 
 # Some architectures are served by multiple build slaves; these are
 # listed here.
-multi_slave_archs = { "s390": ["lfbuild-s390", "lfbuild-s390-2"],
-                      "s390x": ["lfbuild-s390x", "lfbuild-s390x-2"] }
+multi_slave_archs = {}
 
 # Extra projects to build as part of the SDK project.
 lsb_bzr_sdk_projects = ["lsbdev-c++", "lsbdev-qt", "lsbdev-qt3"]
