Remove the System z archs from the low resource list.
Also, support the case where the low resource arch list is empty.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -70,7 +70,7 @@ lsb_buildslave_arch_indep_arch = "x86_64"
 # these archs on every version control change, and we may limit builds
 # in other ways as well.  Note that the arch independent arch, defined
 # immediately above, CANNOT be part of this list.
-low_resource_archs = ["s390", "s390x"]
+low_resource_archs = []
 
 # Some architectures are served by multiple build slaves; these are
 # listed here.
@@ -435,19 +435,23 @@ sch_devchk = scheduler.Scheduler(name="sch-devchk",
 sdk_builder_list = ["build-sdk-" + x
                     for x in lsb_archs + devchk_build_slaves
                     if x not in low_resource_archs]
-low_sdk_builder_list = ["build-sdk-" + x for x in low_resource_archs]
 sch_sdk = scheduler.Scheduler(name="sch-build-sdk",
                               branch="lsb/devel/build_env",
                               builderNames=sdk_builder_list,
                               treeStableTimer=stable_timer_seconds)
-sch_sdk_low = scheduler.Scheduler(name="sch-build-sdk-low",
-                                  branch="lsb/devel/build_env",
-                                  builderNames=low_sdk_builder_list,
-                                  treeStableTimer=slow_stable_timer_seconds)
+
+if low_resource_archs:
+    low_sdk_builder_list = ["build-sdk-" + x for x in low_resource_archs]
+    sch_sdk_low = scheduler.Scheduler(name="sch-build-sdk-low",
+                                      branch="lsb/devel/build_env",
+                                      builderNames=low_sdk_builder_list,
+                                      treeStableTimer=slow_stable_timer_seconds)
 
 # Set up first static set of schedulers.
 
-c['schedulers'] = [sch_jobdir, sch_devchk, sch_sdk, sch_sdk_low]
+c['schedulers'] = [sch_jobdir, sch_devchk, sch_sdk]
+if low_resource_archs:
+    c['schedulers'].append(sch_sdk_low)
 if ForceScheduler:
     c['schedulers'].append(sch_force)
 
