Install lsb-build bits mid-SDK-build.
This is needed when the base has a bug fix for a later part of the build.
See bug 4042 for a recent example.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -570,11 +570,12 @@ for slave_id in lsb_archs + devchk_build_slaves:
     else:
         slave_list = ["devchk-" + slave_id]
 
-    # SDK.  This is unique because it is used to build everything else.  So
-    # we have to build it with a known good SDK, install it, and use that
-    # to build everything else.  The build is separated into two parts: 
-    # build the SDK, and install it.  Additionally, a third job is included
-    # that allows a manual reset to a production SDK.
+    # SDK.  This is unique because it is used to build everything
+    # else.  So we have to start with a known good SDK, build the base
+    # packages with it, install those base packages, and then build
+    # everything else with them.  This results in a "hybrid SDK", so
+    # we also have to force buildbot to reinstall the SDK for the next
+    # build.
 
     build_sdk = factory.BuildFactory()
     build_sdk.addStep(Bzr(baseURL=bzr_toplevel, 
@@ -607,6 +608,9 @@ for slave_id in lsb_archs + devchk_build_slaves:
     build_sdk.addStep(
         ShellCommand(command="cp package/*.rpm ../sdk-results/build_env", 
                      name="copy_base", workdir="build_env"))
+    build_sdk.addStep(
+        ShellCommand(command="ls package/*.rpm | grep -v src.rpm | xargs sudo rpm -Uvh --force; rm -f /tmp/last_installed_sdk",
+                     name="update_base", workdir="build_env"))
     build_sdk.addStep(
         ShellCommand(command="cd package && make clean",
                      name="clean_base", workdir="build_env", alwaysRun=True))
