Add command to report space to all builders.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -578,6 +578,8 @@ for slave_id in lsb_archs + devchk_build_slaves:
     # build.
 
     build_sdk = factory.BuildFactory()
+    build_sdk.addStep(ShellCommand(command=["df", "-h"],
+                                   name="report-space"))
     build_sdk.addStep(Bzr(baseURL=bzr_toplevel, 
                           defaultBranch="lsb/devel/build_env", 
                           mode="full", method="clobber",
@@ -691,6 +693,8 @@ for arch in lsb_archs:
             build_arch = arch
 
         b = factory.BuildFactory()
+        b.addStep(ShellCommand(command=["df", "-h"],
+                               name="report-space"))
         b.addStep(lfbuildbot.LSBReloadSDK(name="reload-sdk", locks=[pkg_lock]))
         add_pre_dependency_triggers(prj, build_arch, b)
         b.addStep(Bzr(baseURL=bzr_toplevel,
@@ -762,6 +766,8 @@ for arch in lsb_archs:
             build_arch = arch
 
         b = factory.BuildFactory()
+        b.addStep(ShellCommand(command=["df", "-h"],
+                               name="report-space"))
         b.addStep(lfbuildbot.LSBReloadSDK(name="reload-sdk", locks=[pkg_lock]))
         add_pre_dependency_triggers(prj, build_arch, b)
         if repo is not None:
@@ -822,6 +828,9 @@ for arch in lsb_archs:
     # Builds based on appbat (appbat and libbat).
 
     libbat = factory.BuildFactory()
+
+    libbat.addStep(ShellCommand(command=["df", "-h"],
+                                name="report-space"))
 
     libbat.addStep(lfbuildbot.LSBReloadSDK(name="reload-sdk", 
                                            locks=[pkg_lock]))
@@ -909,6 +918,9 @@ for arch in lsb_archs:
           'category': 'lsb', 'locks': locks })
 
     appbat = factory.BuildFactory()
+
+    appbat.addStep(ShellCommand(command=["df", "-h"],
+                                name="report-space"))
 
     appbat.addStep(lfbuildbot.LSBReloadSDK(name="reload-sdk",
                                            locks=[pkg_lock]))
@@ -1028,6 +1040,9 @@ for arch in lsb_archs:
 
 for build_slave in devchk_build_slaves:
     devchk = factory.BuildFactory()
+
+    devchk.addStep(ShellCommand(command=["df", "-h"],
+                                name="report-space"))
 
     devchk.addStep(lfbuildbot.LSBReloadSDK(name="reload-sdk",
                                            slave_id=build_slave))
