Remove azov-qt3-tests from build config.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -85,7 +85,6 @@ lsb_bzr_sdk_projects = ["lsbdev-c++", "lsbdev-qt", "lsbdev-qt3"]
 # each project here as the key to the dict, and any extra repositories
 # needed during the build in the array value.
 lsb_pkg_subdir_projects = { "app-checker": [],
-                            "azov-qt3-tests": ["t2c-harness"],
                             "azov-qt4-tests": ["t2c-harness"],
                             "azov-xml2-tests": ["t2c-harness"],
                             "desktop-test": ["xml-test", "misc-test"],
@@ -131,7 +130,6 @@ lsb_arch_indep_projects = ["lsb-setup", "lsbappchk-perl", "lsbappchk-python",
 lsb_dependencies = { "appbat": ["tet-harness", "libbat",
                                 ("misc-test", ["lsb-appchk"])],
                      "libstdcpp-test": ["qmtest-harness"],
-                     "azov-qt3-tests": ["tet-harness"],
                      "azov-qt4-tests": ["tet-harness"],
                      "azov-xml2-tests": ["tet-harness"],
                      "desktop-test": ["tet-harness"],
@@ -159,13 +157,13 @@ pkg_lock = locks.SlaveLock("package_manager", maxCount = 1)
 repo_locks = { "misc-test": locks.SlaveLock("misc-test", maxCount = 1) }
 
 # Branches we watch, besides devel.
-branch_watch_list = { "4.0": [ "appbat", "azov-qt3-tests", "azov-qt4-tests",
+branch_watch_list = { "4.0": [ "appbat", "azov-qt4-tests",
                                "desktop-test", "libstdcpp-test", "misc-test",
                                "olver-core-tests", "perl-test", 
                                "printing-test", "python-test", "runtime-test",
                                "t2c-cpp-tests", "t2c-desktop-tests", 
                                "xml-test", "xts5-test" ],
-                      "4.1": [ "appbat", "azov-qt3-tests", "desktop-test",
+                      "4.1": [ "appbat", "desktop-test",
                                "libstdcpp-test", "misc-test",
                                "olver-core-tests", "perl-test",
                                "printing-test", "python-test", "runtime-test", 
