--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -115,7 +115,7 @@ lsb_pkg_subdir_projects = { "app-checker": [],
 # "Packaging" projects.  These are built out of a tree called "packaging".
 # The name of the project in packaging is the first value of each tuple,
 # while the repository used to build it is the second.
-lsb_packaging_projects = [("lsb-xdg-utils", None)]
+lsb_packaging_projects = []
 
 lsb_arch_indep_projects = ["lsb-setup", "lsbappchk-perl", "lsbappchk-python", 
                            "lsbappchk-sh", "perl-test", "task-pkgs"]
